--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <button class="cat-tab active" data-category="all">All</button>
       <button class="cat-tab" data-category="clothes">Clothes</button>
       <button class="cat-tab" data-category="jewellery">Jewellery</button>
+      <button class="cat-tab" data-category="shoes">Shoes</button>
+      <button class="cat-tab" data-category="bags">Bags</button>
+      <button class="cat-tab" data-category="cosmetics">Cosmetics</button>
       <button class="cat-tab" data-category="stationery">Stationery</button>
       <button class="cat-tab" data-category="home">Home</button>
       <button class="cat-tab" data-category="books">Books</button>
@@ -117,6 +120,9 @@
           <select id="itemCategory" required>
             <option value="clothes">Clothes</option>
             <option value="jewellery">Jewellery</option>
+            <option value="shoes">Shoes</option>
+            <option value="bags">Bags</option>
+            <option value="cosmetics">Cosmetics</option>
             <option value="stationery">Stationery</option>
             <option value="home">Home</option>
             <option value="books">Books</option>
