--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="A minimal, beautifully organized shopping wishlist to save and manage product links across categories.">
-  <title>Livs wishlist</title>
+  <title>Livs Wishlist</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -22,7 +22,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="header-inner">
-      <h1 class="site-title">Livs wishlist</h1>
+      <h1 class="site-title">Livs Wishlist</h1>
       <p class="site-subtitle">things I love</p>
     </div>
     <div class="header-actions">
@@ -128,6 +128,26 @@
             <option value="home">Home</option>
             <option value="books">Books</option>
             <option value="misc">Miscellaneous</option>
+          </select>
+        </div>
+        <div class="form-group" id="subcategoryGroup" style="display: none;">
+          <label for="itemSubcategory">Article of Clothing</label>
+          <select id="itemSubcategory">
+            <option value="">— Select —</option>
+            <option value="tops">Tops</option>
+            <option value="t-shirts">T-Shirts</option>
+            <option value="jumpers">Jumpers & Knitwear</option>
+            <option value="hoodies">Hoodies & Sweatshirts</option>
+            <option value="jackets">Jackets & Coats</option>
+            <option value="dresses">Dresses</option>
+            <option value="skirts">Skirts</option>
+            <option value="trousers">Trousers & Jeans</option>
+            <option value="shorts">Shorts</option>
+            <option value="activewear">Activewear</option>
+            <option value="swimwear">Swimwear</option>
+            <option value="underwear">Underwear & Loungewear</option>
+            <option value="accessories">Accessories</option>
+            <option value="other">Other</option>
           </select>
         </div>
         <div class="form-group">
